--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -14,6 +14,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set xc v16
+        run: sudo xcode-select -s /Applications/Xcode_16.2.app/Contents/Developer
+
       - name: Build
         run: xcodebuild clean build CODE_SIGNING_ALLOWED=NO CODE_SIGNING_REQUIRED=NO
 
