--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -22,4 +22,4 @@ jobs:
         run: xcodebuild clean build CODE_SIGNING_ALLOWED=NO CODE_SIGNING_REQUIRED=NO
 
       - name: Clean 
-        run: cp -v build/Release/*.app .
+        run: cp -Rv build/Release/*.app .
